src/core-crm/objects/Completed_Cadence__c/Completed_Cadence__c.object-meta.xml
<CustomObject>
    <label>Completed Cadence</label>
    <nameField>
        <displayFormat>CC-{0000}</displayFormat>
        <label>Completed Cadence Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Completed Cadences</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>