src/core-crm/objects/Completed_Cadence__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>hed__Application__c</referenceTo>
    <relationshipLabel>Completed Cadences</relationshipLabel>
    <relationshipName>Completed_Cadences</relationshipName>
    <type>Lookup</type>
</CustomField>