src/core-crm/objects/Completed_Cadence__c/fields/Cadence_Name__c.field-meta.xml
<CustomField>
    <fullName>Cadence_Name__c</fullName>
    <formula>Nurture_Track_Configuration__r.Cadence_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cadence Name</label>
    <type>Text</type>
</CustomField>