src/core-crm/objects/Completed_Cadence__c/fields/Cadence_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Cadence_Tasks__c</fullName>
    <description>The number of completed tasks during the cadence lifecycle</description>
    <label>Cadence Tasks</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>