src/core-crm/objects/Completed_Cadence__c/fields/Calculated_Cadence__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Cadence__c</fullName>
    <formula>IF( NOT( ISBLANK( Contact__c ) )  ,  Contact__r.Calculated_Cadence__c  ,  Lead__r.Calculated_Cadence__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calculated Cadence</label>
    <type>Text</type>
</CustomField>