src/core-crm/objects/Completed_Cadence__c/fields/Completed_Cadence_Status__c.field-meta.xml
<CustomField>
    <fullName>Completed_Cadence_Status__c</fullName>
    <label>Completed Cadence Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Successful</fullName>
            </value>
            <value>
                <fullName>Unsuccessful</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>