src/core-crm/objects/Completed_Cadence__c/fields/Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Completed_Date__c</fullName>
    <description>The date the Completed Cadence record Status updated to Successful</description>
    <label>Completed Date</label>
    <type>Date</type>
</CustomField>