src/core-crm/objects/Completed_Cadence__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Completed Cadences</relationshipLabel>
    <relationshipName>Completed_Cadences</relationshipName>
    <type>Lookup</type>
</CustomField>