src/core-crm/objects/Completed_Cadence__c/fields/Days_Waiting__c.field-meta.xml
<CustomField>
    <fullName>Days_Waiting__c</fullName>
    <formula>IF( ISPICKVAL( Completed_Cadence_Status__c , &apos;Successful&apos; ) , 0, NOW() -  CreatedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Waiting</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>