src/core-crm/objects/Completed_Cadence__c/fields/Displayed_in_List_View__c.field-meta.xml
<CustomField>
    <fullName>Displayed_in_List_View__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Displayed in List View</label>
    <type>Checkbox</type>
</CustomField>