src/core-crm/objects/Completed_Cadence__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Completed Cadences</relationshipLabel>
    <relationshipName>Completed_Cadences</relationshipName>
    <type>Lookup</type>
</CustomField>