src/core-crm/objects/Completed_Cadence__c/fields/Nurture_Track_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Nurture_Track_Configuration__c</fullName>
    <label>Nurture Track Configuration</label>
    <referenceTo>Nurture_Track_Configuration__c</referenceTo>
    <relationshipLabel>Completed Cadences</relationshipLabel>
    <relationshipName>Completed_Cadences</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>