src/core-crm/objects/Completed_Cadence__c/fields/Owning_Faculty__c.field-meta.xml
<CustomField>
    <fullName>Owning_Faculty__c</fullName>
    <formula>Application__r.Offered_Program_Plan__r.Owning_Faculty__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owning Faculty</label>
    <type>Text</type>
</CustomField>