src/core-crm/objects/Completed_Cadence__c/fields/QTAC_Offer_Round__c.field-meta.xml
<CustomField>
    <fullName>QTAC_Offer_Round__c</fullName>
    <formula>Application__r.Related_QTAC_Application__r.QTAC_Offer_Round__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QTAC Offer Round</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>