src/core-crm/objects/Completed_Cadence__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Cadence_Name__c</columns>
    <columns>Contact__c</columns>
    <columns>Lead__c</columns>
    <columns>Completed_Cadence_Status__c</columns>
    <columns>Completed_Date__c</columns>


    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>